# Eight-Winds-Graphics-Framework

./: .gitignore  CMakeLists.txt  LICENSE  SetupLinux.sh
include/EightWindsGraphicsFramework/: MainWindow.h  SkeletonHandlerBase.h
include/EightWindsGraphicsFramework/Data/: EWE_Import.h  EWE_Memory.h  EWE_Utils.h  EngineDataTypes.h  FragmentShaderText.h  MemoryTypeBucket.h  ReadEWEFromFile.h  ShaderBuilder.h  TransformInclude.h  TransitionManager.h  VertexShaderText.h
include/EightWindsGraphicsFramework/Fonts/: stb_font_consolas_24_latin1.inl
include/EightWindsGraphicsFramework/Graphics/: Camera.h  DescriptorHandler.h  Descriptors.h  Device.hpp  Device_Buffer.h  EWE_Object.h  LightBufferObject.h  Pipeline.h  PointLight.h  PushConstants.h  Renderer.h  Swapchain.hpp  TextOverlay.h
include/EightWindsGraphicsFramework/Graphics/Model/: Basic_Model.h  Model.h  Vertex.h
include/EightWindsGraphicsFramework/Graphics/Texture/: Cube_Texture.h  Material_Textures.h  Sampler.h  Texture.h  Texture_Manager.h  UI_Texture.h
include/EightWindsGraphicsFramework/Systems/: PipelineSystem.h  SyncHub.h
include/EightWindsGraphicsFramework/Systems/Ocean/: Ocean.h  OceanStructs.h
include/EightWindsGraphicsFramework/Systems/Rendering/: advanced_render_system.h
include/EightWindsGraphicsFramework/Systems/Rendering/Pipelines/: Dimension2.h  MaterialPipelines.h  Pipe_SimpleTextured.h  Pipe_Skybox.h
include/EightWindsGraphicsFramework/Systems/Rendering/Rigid/: RigidRS.h
include/EightWindsGraphicsFramework/Systems/Rendering/Skin/: SkinBufferHandler.h  SkinRS.h  SupportingStructs.h
include/EightWindsGraphicsFramework/Systems/Rendering/Stationary/: StatRS.h
